# mblog

./: .pre-commit-config.yaml  README.md  pyproject.toml
website/accounts/: forms.py  tests.py  urls.py  views.py
website/home/: tests.py  urls.py
website/post/: admin.py  models.py  tests.py  urls.py  views.py
website/posts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
website/posts/migrations/: 0001_initial.py  0002_comment_alter_post_options_and_more.py
website/posts/templatetags/: posts_extras.py
website/static/css/: main.css
website/templates/: base.html  index.html
website/templates/post/: view_post.html  view_posts.html
website/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  register_success.html
website/website/: settings.py  urls.py
