[project]
name = "mblog"
version = "0.0.4"
description = "A micro blog website built using django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.11.8",
]

[tool.djlint]
profile="django"
blank_line_before_tag="load,extends,include,block"

[tool.ruff.lint]
extend-select = ["I"]
